--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
 }
 .btn-div {
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   padding-right: 10PX;
   margin-top: 10px;
 }
